Se cambio el nombre del branding

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <!-- cabecera de la página -->
     <header>
       <!-- branding personal -->
-      <span>Ryan Warner</span>
+      <span>Josue Betancourt</span>
 
       <!-- navegación -->
       <nav>
