cambio de nombre

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
     <!-- contenido principal -->
     <main>
       <!-- saludo -->
-      <h1>I'm Ryan, Software engineer and interface designer.</h1>
+      <h1>I'm Bruno, Software engineer and interface designer.</h1>
 
       <!-- acerca de mi -->
       <p>
