add navbar styles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,25 +8,25 @@
   </head>
   <body>
     <!-- cabecera de la página -->
-    <header>
+    <header class="container navbar">
       <!-- branding personal -->
-      <span>Josue Betancourt</span>
+      <span class="brand">Josue Betancourt</span>
 
       <!-- navegación -->
-      <nav>
+      <nav class="navbar-items-list">
         <!-- enlace 1 -->
-        <a href="#">Articulos</a>
+        <a class="navbar-item" href="#">Articulos</a>
         <!-- enlace 2 -->
-        <a href="#">Snippets</a>
+        <a class="navbar-item" href="#">Snippets</a>
         <!-- enlace 3 -->
-        <a href="#">About</a>
+        <a class="navbar-item" href="#">About</a>
+        </nav>
         <!-- enlace 4 -->
-        <a href="#">Contact</a>
-      </nav>
+      <a class="navbar-item main-action" href="#">Contact</a>
     </header>
 
     <!-- contenido principal -->
-    <main>
+    <main class="container main-section">
       <!-- saludo -->
       <h1>I'm Bruno, Software engineer and interface designer.</h1>
 
@@ -37,7 +37,7 @@
     </main>
 
     <!-- últimos articulos -->
-    <section>
+    <section class="container">
       <!-- nombre de la sección -->
       <h2>
         Latest Articles
@@ -87,7 +87,7 @@
     </section>
 
     <!-- sección de proyectos -->
-    <section>
+    <section class="container">
       <!-- nombre de la sección -->
       <h2>Projects</h2>
       
@@ -133,7 +133,7 @@
     </section>
 
     <!-- sección de contacto -->
-    <section>
+    <section class="container">
       
       <!-- frase llamativa -->
       <h2>What are you working on?</h2>
@@ -148,7 +148,7 @@
     </section>
 
     <!-- fin de la pagina -->
-    <footer>
+    <footer class="container">
       <!-- información de la página -->
       <span>
         Designed and developed by Ryan Warner.
